--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- fontawesome -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
     <!--datatables css-->
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.xyz/1.10.24/css/jquery.dataTables.css">
     
     <link rel="stylesheet" href="css/dashboard.css">
     <title>dashboard page</title>
@@ -578,9 +578,9 @@
     <script src="https://cdn.jsdelivr.xyz/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
     -->
     <!--datatables js-->
-    <script src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.xyz/1.10.24/js/jquery.dataTables.min.js"></script>
     <!--chart js-->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.xyz/npm/chart.js"></script>
 
     <script src="js/dashboard.js"></script>
   </body>
